fix items form spacing - temporarily comment out item_type field

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,11 +29,6 @@ input[type="text"]{
   font-family: Apple Chancery, cursive;
 }
 
-.form-container {
-  margin: 0 auto;
-  width: 50%;
-}
-
 .page-container {
   margin: 50px;
 }
